--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/cambiarIdioma.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/cambiarIdioma.xhtml
@@ -28,6 +28,11 @@ and open the template in the editor.
                     <p:messages id="mLogin" closable="true" showDetail="true" showSummary="false" />
                 </h:panelGroup>
             </p:dialog>
+            
+            <p:dialog id="dlgPendiente" header="Pendiente" widgetVar="dlgPendiente" modal="true" height="130px" width="450px"
+                      closeOnEscape="true" draggable="false" resizable="false" style="padding:10px;align-content: center">
+                <h:outputLabel value="Pendiente revisar outlet"/>
+            </p:dialog>
         </h:form>
     </h:body>
 </html>
