--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -39,10 +39,10 @@ and open the template in the editor.
                         <p:menuitem value="#{msg.m_segmento_sub_crear}" rendered="#{loginBean.renderizarMenu('C_SUB_SEG')}" action="#{menuBean.navegar('C_SUB_SEG')}" ajax="false"/>
                         <p:menuitem value="#{msg.m_segmento_sub_consultar}" rendered="#{loginBean.renderizarMenu('S_SUB_SEG')}" action="#{menuBean.navegar('S_SUB_SEG')}" ajax="false"/>
                     </p:submenu>
-                    <p:submenu label="#{msg.m_battleground}" rendered="#{loginBean.renderizarMenu('BATT')}">
-                        <p:menuitem value="#{msg.m_battleground_crear}" rendered="#{loginBean.renderizarMenu('C_BATT')}" action="#{menuBean.navegar('C_BATT')}" ajax="false"/>
-                        <p:menuitem value="#{msg.m_battleground_consultar}" rendered="#{loginBean.renderizarMenu('S_BATT')}" action="#{menuBean.navegar('S_BATT')}" ajax="false"/>
-                    </p:submenu>
+                    <p:submenu label="#{msg.m_management_potential}" rendered="#{loginBean.renderizarMenu('POTENTIAL')}">
+                        <p:menuitem value="#{msg.m_potential_create}" rendered="#{loginBean.renderizarMenu('C_POTENTIAL')}" action="#{menuBean.navegar('C_POTENTIAL')}" ajax="false"/>
+                        <p:menuitem value="#{msg.m_potential_search}" rendered="#{loginBean.renderizarMenu('S_POTENTIAL')}" action="#{menuBean.navegar('S_POTENTIAL')}" ajax="false"/>
+                    </p:submenu>                    
                     <p:submenu label="#{msg.m_distribuidor}" rendered="#{loginBean.renderizarMenu('DISTRI')}">
                         <p:menuitem value="#{msg.m_distri_crear}" rendered="#{loginBean.renderizarMenu('C_DISTRI')}" action="#{menuBean.navegar('C_DISTRI')}" ajax="false"/>
                         <p:menuitem value="#{msg.m_distri_consultar}" rendered="#{loginBean.renderizarMenu('S_DISTRI')}" action="#{menuBean.navegar('S_DISTRI')}" ajax="false"/>
