--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/diageoWebTemplate.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/diageoWebTemplate.xhtml
@@ -16,9 +16,9 @@
             <div class="banner">
                 <p:graphicImage value="/resources/images/logo/logoDiageoBlanco.png" style="top: 20px;position: absolute;left: 3%"/>    
                 <h:panelGrid columns="3" width="100%" style="top: 70%;position: absolute">                    
-                    <h:outputLabel value="#{msg.ingreso_exitoso} #{loginBean.formatoFechaIngreso(loginBean.usuario.ultimoIngresoExitoso)}" style="color: white;padding: 15%;position: relative;font-size: 12px;font-family: arial"/>
-                    <h:outputLabel value="#{msg.ingreso_fallido} #{loginBean.formatoFechaIngreso(loginBean.usuario.ingresoFallido)}" style="color: white;padding: 15%;position: relative;font-size: 12px;font-family: arial"/>
-                    <h:outputLabel value="#{msg.welcome} #{loginBean.usuario.nombres} #{loginBean.usuario.apellidos}" style="color: white;position: relative;font-size: 15px;left: 40%;font-size: 12px;font-family: arial"/>
+                    <h:outputLabel value="#{msg.ingreso_exitoso} #{loginBean.formatoFechaIngreso(loginBean.usuario.lastSuccesfulLogin)}" style="color: white;padding: 15%;position: relative;font-size: 12px;font-family: arial"/>
+                    <h:outputLabel value="#{msg.ingreso_fallido} #{loginBean.formatoFechaIngreso(loginBean.usuario.failedLoginDate)}" style="color: white;padding: 15%;position: relative;font-size: 12px;font-family: arial"/>
+                    <h:outputLabel value="#{msg.welcome} #{loginBean.usuario.nameUser} #{loginBean.usuario.lastName}" style="color: white;position: relative;font-size: 15px;left: 40%;font-size: 12px;font-family: arial"/>
                 </h:panelGrid>
             </div>
             <div class="menu_template">   
