--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -16,6 +16,7 @@ and open the template in the editor.
                     <p:menuitem value="#{msg.m_outlet_crear}" rendered="#{loginBean.renderizarMenu('C_OUT')}" action="#{menuBean.navegar('C_OUT')}" ajax="false"/>
                     <p:menuitem value="#{msg.m_outlet_consultar}" rendered="#{loginBean.renderizarMenu('S_OUT')}" action="#{menuBean.navegar('S_OUT')}" ajax="false"/>
                     <p:menuitem value="#{msg.m_outlet_carga}" rendered="#{loginBean.renderizarMenu('LOAD_OUT')}" action="#{menuBean.navegar('LOAD_OUT')}" ajax="false"/>
+                    <p:menuitem value="#{msg.m_chain_create}" rendered="#{loginBean.renderizarMenu('C_CHAIN')}" action="#{menuBean.navegar('C_CHAIN')}" ajax="false"/>
                 </p:submenu>   
 
                 <p:submenu label="#{msg.m_administrador}" rendered="#{loginBean.renderizarMenu('MAGANER')}">
