--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -52,6 +52,10 @@ and open the template in the editor.
                         <p:menuitem value="#{msg.m_distri_location_create}" rendered="#{loginBean.renderizarMenu('C_DISTRI_LOCATION')}" action="#{menuBean.navegar('C_DISTRI_LOCATION')}" ajax="false"/>
                         <p:menuitem value="#{msg.m_distri_location_search}" rendered="#{loginBean.renderizarMenu('S_DISTRI_LOCATION')}" action="#{menuBean.navegar('S_DISTRI_LOCATION')}" ajax="false"/>
                     </p:submenu>
+                    
+                    <p:submenu label="#{msg.param}" rendered="#{loginBean.renderizarMenu('QUERY_SEGMENT')}">
+                        <p:menuitem value="#{msg.param_segment_query}" rendered="#{loginBean.renderizarMenu('QUERY_SEGMENT_EDIT')}" action="#{menuBean.navegar('QUERY_SEGMENT_EDIT')}" ajax="false"/>
+                    </p:submenu>
                 </p:submenu>                   
 
                 <p:submenu label="#{msg.m_report}" rendered="#{loginBean.renderizarMenu('REPORT')}"> 
