--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/cambiarIdioma.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/cambiarIdioma.xhtml
@@ -22,13 +22,16 @@ and open the template in the editor.
                     <div style="width: 100%;text-align: center">
                         <p:commandButton id="cbLogin" value="#{msg.btn_send}" 
                                          process="@parent" actionListener="#{loginBean.changeLanguage()}" ajax="false"
-                                         style="color: white;width: 50%;background: -webkit-linear-gradient(#0088cc, #149bdf);"/>
+                                         style="color: white;width: 50%;background: -webkit-linear-gradient(#0088cc, #149bdf);
+                                         ;background: -moz-linear-gradient(#0088cc, #149bdf)
+                                         ;background: -o-linear-gradient(#0088cc, #149bdf)
+                                         ;background: -ms-linear-gradient(#0088cc, #149bdf)"/>
                     </div>
                     <br/>
                     <p:messages id="mLogin" closable="true" showDetail="true" showSummary="false" />
                 </h:panelGroup>
             </p:dialog>
-            
+
             <p:dialog id="dlgPendiente" header="Pendiente" widgetVar="dlgPendiente" modal="true" height="130px" width="450px"
                       closeOnEscape="true" draggable="false" resizable="false" style="padding:10px;align-content: center">
                 <h:outputLabel value="Pendiente revisar outlet"/>
