--- a/DiageoMDMWeb/src/main/webapp/resources/css/login.css
+++ b/DiageoMDMWeb/src/main/webapp/resources/css/login.css
@@ -13,11 +13,11 @@ and open the template in the editor.
 } 
 
 .fondo_imagen{
-   position: relative;
-   width: 100%;
-   height: 100%;
-   text-align: center;
-   z-index: -1;   
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: -1;   
 }
 
 .capa_login{
@@ -26,15 +26,16 @@ and open the template in the editor.
     max-width: 500px;
     height: auto;
     text-align: center;
-    /*background: #D9D9D9;*/
-    /*background: -webkit-linear-gradient(rgb(226, 233, 236), #C1C1C1);*/
     background: black;
     margin: 0 auto;     
     border-radius: 25px;
     left: 50%;
     top:50%;
     transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
+    /*    -webkit-transform: translate(-50%,-50%);
+        -moz-transform: translate(-50%,-50%);
+        -o-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);*/
     border-style: inset;
     border-width: thick;
 }
@@ -43,6 +44,9 @@ and open the template in the editor.
     color: white;
     width: 50%;
     background: -webkit-linear-gradient(#0088cc, #149bdf);
+    background: -moz-linear-gradient(#0088cc, #149bdf);
+    background: -ms-linear-gradient(#0088cc, #149bdf);
+    background: -o-linear-gradient(#0088cc, #149bdf);
 }
 
 ui-messages-error, .ui-message-error{
@@ -56,4 +60,19 @@ ui-messages-error, .ui-message-error{
 
 .ui-dialog-title{
     font-size: 14px !important;
+}
+
+.ui-watermark {
+    color: red !important;
+    font-weight: normal !important;
+}
+
+-webkit-input-placeholder {
+    color: red !important;
+    font-weight: normal !important;
+}
+
+-moz-placeholder {
+    color: red !important;
+    font-weight: normal !important;
 }
