--- a/DiageoMDMWeb/src/main/webapp/resources/css/login.css
+++ b/DiageoMDMWeb/src/main/webapp/resources/css/login.css
@@ -34,8 +34,8 @@ and open the template in the editor.
     transform: translate(-50%,-50%);
     /*    -webkit-transform: translate(-50%,-50%);
         -moz-transform: translate(-50%,-50%);
-        -o-transform: translate(-50%,-50%);
-        -ms-transform: translate(-50%,-50%);*/
+        -o-transform: translate(-50%,-50%);*/
+    -ms-transform: translate(-50%,-50%);
     border-style: inset;
     border-width: thick;
 }
