--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/diageoWebTemplate.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/diageoWebTemplate.xhtml
@@ -9,6 +9,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet library="css" name="template.css"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <title>#{msg.tittle_app}</title>
     </h:head>
     <h:body>
