--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -70,7 +70,7 @@ and open the template in the editor.
 
                 <p:submenu label="#{msg.m_report}" rendered="#{loginBean.renderizarMenu('REPORT')}"> 
                     <p:menuitem value="#{msg.m_report_user}" rendered="#{loginBean.renderizarMenu('REPORT_USER')}" action="#{menuBean.navegar('REPORT_USER')}" ajax="false"/>
-                    <p:menuitem value="#{msg.dis_commercial_management}" rendered="#{loginBean.renderizarMenu('REPORT_COMMERCIAL_MANAGEMENT')}" action="#{menuBean.navegar('REPORT_COMMERCIAL_MANAGEMENT')}" ajax="false"/>
+                    <p:menuitem value="#{msg.m_report_distri}" rendered="#{loginBean.renderizarMenu('REPORT_COMMERCIAL_MANAGEMENT')}" action="#{menuBean.navegar('REPORT_COMMERCIAL_MANAGEMENT')}" ajax="false"/>
                     <p:menuitem value="#{msg.m_report_casuistry}" rendered="#{loginBean.renderizarMenu('REPORT_CASUISTRY')}" action="#{menuBean.navegar('REPORT_CASUISTRY')}" ajax="false"/>
                 </p:submenu>
 
