--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -51,6 +51,8 @@ and open the template in the editor.
                         <p:menuitem value="#{msg.m_potential_search}" rendered="#{loginBean.renderizarMenu('S_POTENTIAL')}" action="#{menuBean.navegar('S_POTENTIAL')}" ajax="false"/>
                     </p:submenu>                    
                     <p:submenu label="#{msg.m_distribuidor}" rendered="#{loginBean.renderizarMenu('DISTRI')}">
+                        <p:menuitem value="#{msg.m_distr_admin_create}" rendered="#{loginBean.renderizarMenu('C_ADMIN')}" action="#{menuBean.navegar('C_ADMIN')}" ajax="false"/>
+                        <p:menuitem value="#{msg.m_distr_admin_search}" rendered="#{loginBean.renderizarMenu('S_ADMIN')}" action="#{menuBean.navegar('S_ADMIN')}" ajax="false"/>
                         <p:menuitem value="#{msg.m_distri_crear}" rendered="#{loginBean.renderizarMenu('C_DISTRI')}" action="#{menuBean.navegar('C_DISTRI')}" ajax="false"/>
                         <p:menuitem value="#{msg.m_distri_consultar}" rendered="#{loginBean.renderizarMenu('S_DISTRI')}" action="#{menuBean.navegar('S_DISTRI')}" ajax="false"/>
                     </p:submenu>
