--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -8,8 +8,8 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:body>       
+      xmlns:f="http://xmlns.jcp.org/jsf/core">    
+    <!--p:menuitem value="{msg.m_outlet_carga}" rendered="{loginBean.renderizarMenu('LOAD_OUT')}" action="{menuBean.navegar('LOAD_OUT')}" ajax="false"/-->                    
         <h:form>
             <style>
                 .ui-menu.ui-menubar .ui-menu-parent .ui-menu-child{
@@ -22,7 +22,7 @@ and open the template in the editor.
                     <p:menuitem value="#{msg.m_outlet_consultar}" rendered="#{loginBean.renderizarMenu('S_OUT')}" action="#{menuBean.navegar('S_OUT')}" ajax="false"/>                    
                     <p:menuitem value="#{msg.m_chain_create}" rendered="#{loginBean.renderizarMenu('C_CHAIN')}" action="#{menuBean.navegar('C_CHAIN')}" ajax="false"/>
                     <p:menuitem value="#{msg.m_chain_search}" rendered="#{loginBean.renderizarMenu('S_CHAIN')}" action="#{menuBean.navegar('S_CHAIN')}" ajax="false"/>
-                    <p:menuitem value="#{msg.m_outlet_carga}" rendered="#{loginBean.renderizarMenu('LOAD_OUT')}" action="#{menuBean.navegar('LOAD_OUT')}" ajax="false"/>                    
+                    
                 </p:submenu>   
 
                 <p:submenu label="#{msg.m_administrador}" rendered="#{loginBean.renderizarMenu('MAGANER')}">
@@ -89,6 +89,6 @@ and open the template in the editor.
                                      background: -ms-linear-gradient(#0088cc, #149bdf);"/>
                 </f:facet>
             </p:menubar> 
-        </h:form>     
-    </h:body>
+        </h:form>         
 </html>
+
